Исправления кода для тестов postman 2